# bimbumbam

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  flake.nix
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: audio.rs  color.rs  config.rs  effect.rs  gpu.rs  keys.rs  lib.rs  main.rs  particle.rs  render.rs  screenshot.rs  text.rs  wayland.rs
